<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_title">Login. Here we go.</string>
    <string name="email">Email</string>
    <string name="password">*****</string>
    <string name="cancel_btn">Cancel</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="login_btn">Login</string>

</resources>
