<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/kayaking"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#32071856"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_title"
            android:id="@+id/tvLogin"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:textColor="#ffffffff" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:editable="true"
            android:layout_below="@id/tvLogin"
            android:id="@+id/etEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:text="@string/email" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:editable="true"
            android:layout_below="@id/etEmail"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:id="@+id/etPassword"
            android:text="@string/password" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cancel_btn"
            android:id="@+id/button2"
            android:layout_below="@id/etPassword"
            android:background="#ffe4e3e4" />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:layout_marginTop="10dp"
            android:layout_below="@id/etPassword"
            android:layout_alignRight="@id/etPassword"
            android:id="@+id/btnLogin"
            android:background="#ff0d9afb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@id/btnLogin"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:id="@+id/tvForgotPassword"
            android:textColor="#ff0d7ccb" />

    </RelativeLayout>

</RelativeLayout>
